Fix spacing consistency

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -21,6 +21,14 @@ section {
   padding: 1em;
 }
 
+section p:last-child {
+  margin-bottom: 0;
+}
+
+.list-inline-item:not(:last-child) {
+  margin-right: 0;
+}
+
 /* Stick a comma after each project/org except the last */
 .list-inline-item:not(:last-child) a:after {
     content: ",";
@@ -40,6 +48,10 @@ section {
 
 #issues_table_wrapper {
   padding: 0;
+}
+
+#results .lead {
+  margin-top: 20px;
 }
 
 footer {
